7.code-server/0.pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
