7.code-server/7.nana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nana-server
  name: nana-code-server
  namespace: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nana-server
  template:
    metadata:
      labels:
        app: nana-server
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - image: codercom/code-server:latest
          name: code-server
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 1
              memory: "512Mi"
            limits:
              cpu: 2
              memory: "4Gi"
          volumeMounts:
            - name: smb
              mountPath: "/home/coder/smb"
              subPath: "repos/nana"
            - name: smb
              mountPath: "/home/coder/k8s-read"
              subPath: "repos/k8s"
              readOnly: true
            - name: bin-volume
              mountPath: /usr/local/bin/kubectl
              subPath: kubectl
            - name: bin-volume
              mountPath: /usr/local/bin/helm
              subPath: helm
            - name: kubeconfig
              mountPath: /home/coder/.kube
              readOnly: true
            - name: code-config
              mountPath: /home/coder/.config/code-server
      volumes:
        - name: smb
          persistentVolumeClaim:
            claimName: pvc-smb
        - name: bin-volume
          emptyDir: {}
        - name: kubeconfig
          configMap:
            name: kubeconfig
        - name: code-config
          configMap:
            name: nana-server-config
---
apiVersion: v1
kind: Service
metadata:
  name: nana-server
  namespace: code-server
spec:
  selector:
    app: nana-server
  ports:
  - port: 8080
    targetPort: 8080
